@@ -1,12 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST lcdf-typetools-2.65.tar.gz 502444 RMD160 ddc04b7d7c359fa4e302cf5d0b4e2dda5558a3cd SHA1 7b241ca435b1e6782e2dd12018c31133085dac3c SHA256 dd84b54b617bb888897e8f31f27a418696d86e3ddddcd748c527ae5c00c9a77b
+DIST lcdf-typetools-2.66.tar.gz 502950 RMD160 723f2ccca813b5a33f28417edfa67ab239ce2e1a SHA1 7cf8d953efcbae54772a76e39b6615393f895de4 SHA256 7bfc0386c7b24719e9dc8e0c6ae5f9f780e5689200075d79ea5c85919f5e97db
 EBUILD lcdf-typetools-2.65.ebuild 687 RMD160 814657fb69b1cd0a1744e8ca20e3fd2a40090017 SHA1 cef75d4b1bd4d5c1b40efa363d0d37cfb962c0a0 SHA256 029600537d23d19b01c61fc3d78feeebf70e4a371ce9453996f0677fce304d1f
 MD5 766c8df024bdabfc9d3dd7cf67295554 lcdf-typetools-2.65.ebuild 687
 RMD160 814657fb69b1cd0a1744e8ca20e3fd2a40090017 lcdf-typetools-2.65.ebuild 687
 SHA256 029600537d23d19b01c61fc3d78feeebf70e4a371ce9453996f0677fce304d1f lcdf-typetools-2.65.ebuild 687
-MISC ChangeLog 408 RMD160 8bdbe492c1a7730251e01ccfdaa4246d2c3205f6 SHA1 fad17e678fed379492e912b2403b6ed44355faa5 SHA256 acff1619aed6ffd3b8a814d9e64fa0ba54d25fb95ddeec55bc1c07d8acc56848
-MD5 7fa1ad7835238656a62847731045d6fd ChangeLog 408
-RMD160 8bdbe492c1a7730251e01ccfdaa4246d2c3205f6 ChangeLog 408
-SHA256 acff1619aed6ffd3b8a814d9e64fa0ba54d25fb95ddeec55bc1c07d8acc56848 ChangeLog 408
+EBUILD lcdf-typetools-2.66.ebuild 686 RMD160 423bf125f01216d2c7fa41486dbeaed92c293e9c SHA1 001c16214f4f7c594048869503332402a294ae77 SHA256 b163438efee9b0f2c639720d41f618e2d31e935bef4e9aa5d2ae70c25a1368ca
+MD5 c9e76206e21bb75cc46b9aa2e7253a40 lcdf-typetools-2.66.ebuild 686
+RMD160 423bf125f01216d2c7fa41486dbeaed92c293e9c lcdf-typetools-2.66.ebuild 686
+SHA256 b163438efee9b0f2c639720d41f618e2d31e935bef4e9aa5d2ae70c25a1368ca lcdf-typetools-2.66.ebuild 686
+MISC ChangeLog 543 RMD160 23b1c9a0a10f0edd96827dc6c4e80d65692b458d SHA1 afdbc9c117912281b628b475cdac6ce73ed141a4 SHA256 009116d6283653f747c0481e1820638e7a1ebdf19a51d640aba3012cff591999
+MD5 22ad9691c977b825a62696bba81a56d1 ChangeLog 543
+RMD160 23b1c9a0a10f0edd96827dc6c4e80d65692b458d ChangeLog 543
+SHA256 009116d6283653f747c0481e1820638e7a1ebdf19a51d640aba3012cff591999 ChangeLog 543
 MISC metadata.xml 602 RMD160 91f8f4404c8c31172c4fb530bc89d31ddd64e60d SHA1 d5498d7cfeeb6c8fe1928531e62b6e73b0ae3eef SHA256 043082d0fa1469146654e3421f7ca606001b03f2db58a9560d60e92351dba24c
 MD5 da98890e7c523d2d7e3764e6b8fb1054 metadata.xml 602
 RMD160 91f8f4404c8c31172c4fb530bc89d31ddd64e60d metadata.xml 602
@@ -14,3 +22,13 @@ SHA256 043082d0fa1469146654e3421f7ca606001b03f2db58a9560d60e92351dba24c metadata
 MD5 93e2fd47c8d37adc326c638535347111 files/digest-lcdf-typetools-2.65 259
 RMD160 8b69bf3651f1386183dcb9655d752b39a8eaa1f9 files/digest-lcdf-typetools-2.65 259
 SHA256 0a40a593328bd2c579935c0a4f9ddbceeedadba11bc617a8714eb983a5f7f109 files/digest-lcdf-typetools-2.65 259
+MD5 bbe20eaf47d9fa93b3db4c00332744cf files/digest-lcdf-typetools-2.66 259
+RMD160 1680bb65f538eedf33f5e2149e41b36d3aaebc6b files/digest-lcdf-typetools-2.66 259
+SHA256 a5920e918fcadb437c18d7b155bcb621fa06155115b161ab7c9fb8f83804086d files/digest-lcdf-typetools-2.66 259
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.6 (GNU/Linux)
+
+iD8DBQFG3My/vFcC4BYPU0oRApxwAKCMhWiy1jRAzdJv94TfZ6NOLO50ngCgjpz2
+Mz7H4O+WCXsb2IoMAlFg8AU=
+=s2gQ
+-----END PGP SIGNATURE-----
